# ros-navigation2

./: .gitmodules  Dockerfile  README.md  run.sh
nav2_bringup/: goat_world.yaml  nav2_bringup_launch.py  nav2_params.yaml  navigate_to_pose_w_replanning_rolling_and_recovery.xml
winch_control_interfaces/: CMakeLists.txt  package.xml
winch_control_interfaces/action/: Morph.action
